Use cython as a runtime dependency as well

--- a/recipes/python-pkcs11/meta.yaml
+++ b/recipes/python-pkcs11/meta.yaml
@@ -23,7 +23,7 @@ requirements:
     - setuptools_scm
     - toolchain
   run:
-    - python
+    - cython
     - aenum 2.0.*
     - asn1crypto ==0.22.0
     - cached-property 1.3.*
