add new maintainers

--- a/recipes/r-betareg/meta.yaml
+++ b/recipes/r-betareg/meta.yaml
@@ -57,3 +57,7 @@ about:
 extra:
   recipe-maintainers:
     - sebastian-luna-valero
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
