--- a/recipes/r-hiddenmarkov/meta.yaml
+++ b/recipes/r-hiddenmarkov/meta.yaml
@@ -52,3 +52,7 @@ about:
 extra:
   recipe-maintainers:
     - sebastian-luna-valero
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
