--- a/recipes/r-lokern/meta.yaml
+++ b/recipes/r-lokern/meta.yaml
@@ -49,3 +49,7 @@ about:
 extra:
   recipe-maintainers:
     - sebastian-luna-valero
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
