--- a/recipes/r-sciplot/meta.yaml
+++ b/recipes/r-sciplot/meta.yaml
@@ -44,3 +44,7 @@ about:
 extra:
   recipe-maintainers:
     - sebastian-luna-valero
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
