--- a/recipes/r-sfsmisc/meta.yaml
+++ b/recipes/r-sfsmisc/meta.yaml
@@ -45,3 +45,7 @@ about:
 extra:
   recipe-maintainers:
     - sebastian-luna-valero
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
