--- a/recipes/r-pvclust/meta.yaml
+++ b/recipes/r-pvclust/meta.yaml
@@ -46,3 +46,7 @@ about:
 extra:
   recipe-maintainers:
     - sebastian-luna-valero
+    - johanneskoester
+    - bgruening
+    - daler
+    - jdblischak
