--- a/recipes/r-betareg/meta.yaml
+++ b/recipes/r-betareg/meta.yaml
@@ -52,7 +52,8 @@ about:
     of a beta-distributed response), bias-corrected and bias-reduced estimation as well
     as finite mixture models and recursive partitioning for beta regressions are provided.
   license_family: GPL
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
