--- a/recipes/r-hiddenmarkov/meta.yaml
+++ b/recipes/r-hiddenmarkov/meta.yaml
@@ -47,7 +47,8 @@ about:
     for an introduction to the package, and "Change Log" for a list of recent changes.
     The algorithms are based of those of Walter Zucchini.
   license_family: GPL
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
