--- a/recipes/r-lokern/meta.yaml
+++ b/recipes/r-lokern/meta.yaml
@@ -44,7 +44,8 @@ about:
   license: GPL (>= 2)
   summary: Kernel regression smoothing with adaptive local or global plug-in bandwidth selection.
   license_family: GPL
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
