--- a/recipes/r-pvclust/meta.yaml
+++ b/recipes/r-pvclust/meta.yaml
@@ -41,7 +41,8 @@ about:
     in hierarchical cluster analysis. It provides AU (approximately unbiased) p-value
     as well as BP (bootstrap probability) value for each cluster in a dendrogram.
   license_family: GPL
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
