--- a/recipes/r-sciplot/meta.yaml
+++ b/recipes/r-sciplot/meta.yaml
@@ -39,7 +39,8 @@ about:
   summary: A collection of functions that creates graphs with error bars for data collected from
     one-way or higher factorial designs.
   license_family: GPL
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
