--- a/recipes/r-sfsmisc/meta.yaml
+++ b/recipes/r-sfsmisc/meta.yaml
@@ -40,7 +40,8 @@ about:
   summary: Useful utilities ['goodies'] from Seminar fuer Statistik ETH Zurich, quite a few related
     to graphics; some were ported from S-plus.
   license_family: GPL
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
