updated license path

--- a/recipes/django-bakery/meta.yaml
+++ b/recipes/django-bakery/meta.yaml
@@ -33,7 +33,7 @@ about:
   home: https://github.com/datadesk/django-bakery
   license: MIT
   license_family: MIT
-  license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'A set of helpers for baking your Django site out as flat files'
   description: |
     A set of helpers for baking your Django site out as flat files
