remove python run version requirement

--- a/recipes/signac-dashboard/meta.yaml
+++ b/recipes/signac-dashboard/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     - python
     - setuptools
   run:
-    - python >=3.4
+    - python
     - signac >=0.8
     - flask
     - flask-assets
