--- a/recipes/wagtail-bakery/meta.yaml
+++ b/recipes/wagtail-bakery/meta.yaml
@@ -30,11 +30,11 @@ test:
     - wagtailbakery
 
 about:
-  home: https://github.com/jazzband/collectfast
-  license: 
-  license_family: 
-  license_file: 
-  summary: 'A set of helpers for baking your Django Wagtail site out as flat files.'
+  home: https://github.com/moorinteractive/wagtail-bakery
+  license: MIT
+  license_family: MIT
+  license_file: LICENSE
+  summary: 'A set of helpers for baking your Django Wagtail site out as flat files'
   description: |
     Wagtail-bakery is built on top of Django bakery. Wagtail-bakery is not limited to 
     build Wagtail pages specifically, mixed content is possible!
