added license path

--- a/recipes/wagtail-bakery/meta.yaml
+++ b/recipes/wagtail-bakery/meta.yaml
@@ -33,7 +33,7 @@ about:
   home: https://github.com/moorinteractive/wagtail-bakery
   license: MIT
   license_family: MIT
-  license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'A set of helpers for baking your Django Wagtail site out as flat files'
   description: |
     Wagtail-bakery is built on top of Django bakery. Wagtail-bakery is not limited to 
