pwkit: whoops, wrong version of the file

--- a/recipes/pwkit/meta.yaml
+++ b/recipes/pwkit/meta.yaml
@@ -1,16 +1,9 @@
-# Copyright 2014-2017 Peter Williams and collaborators.
-# This file is licensed under a 3-clause BSD license; see LICENSE.txt.
-
-# Shortcut to get new SHA256 digest:
-#
-#   curl -s https://pypi.org/project/pwkit/ |grep sha256-link |tail -n1
-
 {% set name = "pwkit" %}
-{% set version = "0.8.8" %}
-{% set sha256 = "26f18dbef503b1051c8f0d46298ac4fcc2c02a771c170a97e3208568e626643f" %}
+{% set version = "0.8.9" %}
+{% set sha256 = "ee706f8b1675ea5be04b4ec2052a596d5ade3819b26d876b4af94373072110c5" %}
 
 package:
-  name: {{ name }}
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
@@ -21,11 +14,11 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record=files.txt
+  skip: true  # [win]
   entry_points:
     - astrotool = pwkit.cli.astrotool:commandline
     - casatask = pwkit.environments.casa.tasks:commandline
     - imtool = pwkit.cli.imtool:commandline
-    - latexdriver = pwkit.cli.latexdriver:commandline
     - pkcasascript = pwkit.environments.casa.scripting:commandline
     - pkenvtool = pwkit.environments:commandline
     - wrapout = pwkit.cli.wrapout:commandline
@@ -33,14 +26,14 @@ build:
 requirements:
   build:
     - numpy
-    - pathlib # [py2k]
+    - pathlib  # [py2k]
     - python
     - setuptools
     - six
 
   run:
     - numpy
-    - pathlib # [py2k]
+    - pathlib  # [py2k]
     - python
     - six
 
@@ -50,5 +43,14 @@ test:
 
 about:
   home: https://github.com/pkgw/pwkit/
-  license: MIT License
-  summary: Miscellaneous scientific and astronomical tools.
+  license: MIT
+  license_family: MIT
+  summary: 'Miscellaneous scientific and astronomical tools.'
+  description: |
+    A grab-bag of helpful tools for doing science in Python.
+  doc_url: https://pwkit.readthedocs.io/
+  dev_url: https://github.com/pkgw/pwkit
+
+extra:
+  recipe-maintainers:
+    - pkgw
