--- a/recipes/hcephes/meta.yaml
+++ b/recipes/hcephes/meta.yaml
@@ -37,7 +37,8 @@ requirements:
 
 test:
   commands:
-    - test -e $PREFIX/lib/libhcephes.so  # [unix]
+    - test -e $PREFIX/lib/libhcephes.so  # [linux]
+    - test -e $PREFIX/lib/libhcephes.dylib  # [osx]
     - test -e $PREFIX/lib/libhcephes_static.a  # [unix]
     - if NOT exist %PREFIX%/lib/hcephes.lib exit 1  # [win]
     - if NOT exist %PREFIX%/lib/hcephes.dll exit 1  # [win]
