remove license (it isn't in the pypi package) I have an issue to rectify this

--- a/recipes/recommonmark/meta.yaml
+++ b/recipes/recommonmark/meta.yaml
@@ -33,7 +33,7 @@ about:
   home: https://github.com/rtfd/recommonmark
   license: MIT
   license_family: MIT
-  license_file: LICENSE.md
+#  license_file: LICENSE.md
   summary: 'A docutils-compatibility bridge to CommonMark.'
 
   description: |
