--- a/recipes/osfclient/meta.yaml
+++ b/recipes/osfclient/meta.yaml
@@ -7,14 +7,15 @@ package:
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: {{ sha256 }}
 
-build:
-  number: 1
+  build:
+  number: 0
   noarch: python
   script: python setup.py install --single-version-externally-managed --record record.txt
+  entry_points:
+    - osf = osfclient.__main__:main
 
 requirements:
   build:
@@ -27,6 +28,8 @@ requirements:
     - six
 
 test:
+  commands:
+    - osf --help
   imports:
     - osfclient
 
