manually package license

--- a/recipes/osfclient/meta.yaml
+++ b/recipes/osfclient/meta.yaml
@@ -37,6 +37,7 @@ about:
   home: http://osfclient.readthedocs.io/
   license: BSD-3-Clause
   license_family: BSD
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'An OSF command-line library.'
   description: 'An OSF command-line client and library.'
   doc_url: http://osfclient.readthedocs.io/
