License and maintainers.

--- a/recipes/svgutils/meta.yaml
+++ b/recipes/svgutils/meta.yaml
@@ -28,7 +28,11 @@ test:
 
 about:
   home: https://svgutils.readthedocs.io
-  license: MIT License
+  license: MIT
   summary: |
     Python SVG editor that allows to automatically create publication ready
     composite SVG figures.
+
+extra:
+  recipe-maintainers:
+    - johanneskoester
