--- a/recipes/svgutils/meta.yaml
+++ b/recipes/svgutils/meta.yaml
@@ -32,6 +32,13 @@ about:
   summary: |
     Python SVG editor that allows to automatically create publication ready
     composite SVG figures.
+  description: |
+    This is an utility package that helps to edit and concatenate SVG files.
+    It is especially directed at scientists preparing final figures for
+    submission to journal. So far it supports arbitrary placement and scaling
+    of svg figures and adding markers, such as labels.
+  doc_url: https://svgutils.readthedocs.io
+  dev_url: https://github.com/btel/svg_utils
 
 extra:
   recipe-maintainers:
