--- a/recipes/gnutls/meta.yaml
+++ b/recipes/gnutls/meta.yaml
@@ -48,8 +48,8 @@ about:
   license_file: LICENSE
   summary: 'GnuTLS is a secure communications library implementing the SSL, TLS and DTLS protocols'
   description: |
-  GnuTLS is a secure communications library implementing the SSL, TLS
-  and DTLS protocols and technologies around them: It provides a 
+  GnuTLS is a secure communications library: it implements the SSL, TLS
+  and DTLS protocols and technologies around them. It provides a 
   simple C language application programming interface (API) to access
   the secure communications protocols as well as APIs to parse and 
   write X.509, PKCS 12, and other required structures. The project
