--- a/recipes/gnutls/meta.yaml
+++ b/recipes/gnutls/meta.yaml
@@ -46,7 +46,7 @@ about:
   license: GPL 2.1
   license_family: GPL
   license_file: LICENSE
-  summary: 'GnuTLS is a secure communications library implementing the SSL, TLS and DTLS protocols'
+  summary: 'GnuTLS is a secure communications library'
   description: |
   GnuTLS is a secure communications library: it implements the SSL, TLS
   and DTLS protocols and technologies around them. It provides a 
