--- a/recipes/gnutls/meta.yaml
+++ b/recipes/gnutls/meta.yaml
@@ -46,18 +46,7 @@ about:
   license: GPL 2.1
   license_family: GPL
   license_file: LICENSE
-  summary: 'GnuTLS is a secure communications library'
-  description: |
-  GnuTLS is a secure communications library: it implements the SSL, TLS
-  and DTLS protocols and technologies around them. It provides a 
-  simple C language application programming interface (API) to access
-  the secure communications protocols as well as APIs to parse and 
-  write X.509, PKCS 12, and other required structures. The project
-  strives to provide a secure communications back-end, simple to use
-  and integrated with the rest of the base Linux libraries. A back-end
-  designed to work and be secure out of the box, keeping the TLS and
-  PKI complexity outside the applications.
-
+  summary: 'GnuTLS is a secure communications library implementing the SSL, TLS and DTLS protocols'
   doc_url: http://www.gnutls.org/documentation.html
   dev_url: https://gitlab.com/gnutls/gnutls/tree/master
 
