added missing requirements

--- a/recipes/fs.sshfs/meta.yaml
+++ b/recipes/fs.sshfs/meta.yaml
@@ -18,6 +18,9 @@ requirements:
     - python
     - setuptools
   run:
+    - green
+    - docutils
+    - Pygments
     - pyfilesystem2
     - six
     - paramiko
