added setup.py requirements also to build

--- a/recipes/fs.sshfs/meta.yaml
+++ b/recipes/fs.sshfs/meta.yaml
@@ -17,6 +17,10 @@ requirements:
   build:
     - python
     - setuptools
+    - pygments
+    - green
+    - docutils
+
   run:
     - green
     - docutils
