Add path to license file for GPL-2 and GPL-3 for R packages.

--- a/recipes/r-ecp/meta.yaml
+++ b/recipes/r-ecp/meta.yaml
@@ -50,6 +50,8 @@ about:
     and exact search methods  are included. All methods return the set of estimated
     change- points as well as other summary information.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
