--- a/recipes/r-wavethresh/meta.yaml
+++ b/recipes/r-wavethresh/meta.yaml
@@ -49,6 +49,8 @@ about:
     of data, locally stationary wavelet time series, nonstationary multiscale transfer
     function modeling, density estimation.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
