--- a/recipes/r-bmp/meta.yaml
+++ b/recipes/r-bmp/meta.yaml
@@ -40,6 +40,8 @@ about:
   summary: Reads Windows BMP format images. Currently limited to 8 bit greyscale images and 24,32
     bit (A)RGB images. Pure R implementation without external dependencies.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
