--- a/recipes/r-clue/meta.yaml
+++ b/recipes/r-clue/meta.yaml
@@ -46,6 +46,8 @@ about:
   license: GPL-2
   summary: CLUster Ensembles.
   license_family: GPL2
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-2'   # [win]
 
 extra:
   recipe-maintainers:
