--- a/recipes/r-contrast/meta.yaml
+++ b/recipes/r-contrast/meta.yaml
@@ -51,6 +51,8 @@ about:
   license: GPL-2
   summary: One degree of freedom contrasts for lm, glm, gls, and geese objects.
   license_family: GPL2
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-2'   # [win]
 
 extra:
   recipe-maintainers:
