--- a/recipes/r-feature/meta.yaml
+++ b/recipes/r-feature/meta.yaml
@@ -46,6 +46,8 @@ about:
   license: GPL-2 | GPL-3
   summary: Local inferential feature significance for multivariate kernel density estimation.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
