--- a/recipes/r-geepack/meta.yaml
+++ b/recipes/r-geepack/meta.yaml
@@ -45,6 +45,8 @@ about:
     structures, through mean link, scale link, and correlation link. Can also handle
     clustered categorical responses.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
