--- a/recipes/r-mcmcpack/meta.yaml
+++ b/recipes/r-mcmcpack/meta.yaml
@@ -59,6 +59,8 @@ about:
     a general purpose Metropolis sampling algorithm, and tools for visualization are
     provided.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
