--- a/recipes/r-moments/meta.yaml
+++ b/recipes/r-moments/meta.yaml
@@ -40,6 +40,8 @@ about:
     tests related to them (Anscombe-Glynn, D''Agostino, Bonett-Seier).'
 
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
