--- a/recipes/r-polspline/meta.yaml
+++ b/recipes/r-polspline/meta.yaml
@@ -45,6 +45,8 @@ about:
     with flexible tails, logspline, lspec, polyclass, and polymars, by C. Kooperberg
     and co-authors.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
