--- a/recipes/r-readbitmap/meta.yaml
+++ b/recipes/r-readbitmap/meta.yaml
@@ -48,6 +48,8 @@ about:
     extension. Reading of JPEG and PNG image depends on libjpg and libpng libraries.
     See file INSTALL for details if necessary.
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
