--- a/recipes/r-rms/meta.yaml
+++ b/recipes/r-rms/meta.yaml
@@ -78,6 +78,8 @@ about:
     Buckley-James model, generalized least squares for serially or spatially correlated
     observations, generalized linear models, and quantile regression."
   license_family: GPL3
+  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3'   # [unix]
+  license_file: '{{ environ["PREFIX"] }}\R\share\licenses\GPL-3'   # [win]
 
 extra:
   recipe-maintainers:
