--- a/recipes/gnutls/meta.yaml
+++ b/recipes/gnutls/meta.yaml
@@ -29,7 +29,8 @@ requirements:
     - toolchain3 
     - libidn11
     - pkg-config  # [osx]
-    - autoconf 
+    - autoconf
+    - gettext
 
   run:
     - gmp 6.1.*
