--- a/recipes/gnutls/meta.yaml
+++ b/recipes/gnutls/meta.yaml
@@ -13,9 +13,13 @@ source:
   sha256: {{ sha256 }}
   patches:
     - pkgconfig.patch
-    #this patch fixes the pkgconfig test. It looks for the library in the correct place (${PREFIX}/lib and ${PREFIX}/includes and uses gcc to compile the generated file.
+    #this patch fixes the pkgconfig test. It looks for the library
+    #in the correct place (${PREFIX}/lib and ${PREFIX}/includes and
+    #uses gcc to compile the generated file.
     - makefile.patch
-    #this patches fixes the makefile in tests/slow/. This makefile used to trigger the test on the openssl compatibility module even though it was not. I added a test on ENABLE_OPENSSL.
+    #this patches fixes the makefile in tests/slow/. This makefile
+    #used to trigger the test on the openssl compatibility module
+    #even though it was not. I added a test on ENABLE_OPENSSL.
     
 build:
   number: 0
@@ -32,6 +36,7 @@ requirements:
     - autoconf
     - gettext
     - automake
+    - libtool
 
   run:
     - gmp 6.1.*
