--- a/recipes/gnutls/meta.yaml
+++ b/recipes/gnutls/meta.yaml
@@ -14,12 +14,12 @@ source:
   patches:
     - pkgconfig.patch
     #this patch fixes the pkgconfig test. It looks for the library
-    #in the correct place (${PREFIX}/lib and ${PREFIX}/includes and
-    #uses gcc to compile the generated file.
+    #in the correct place (${PREFIX}/lib and ${PREFIX}/includes) and
+    #uses gcc to compile the generated temporary files.
     - makefile.patch
     #this patches fixes the makefile in tests/slow/. This makefile
     #used to trigger the test on the openssl compatibility module
-    #even though it was not. I added a test on ENABLE_OPENSSL.
+    #even though it was not built. I added a test on ENABLE_OPENSSL.
     
 build:
   number: 0
