added license path

--- a/recipes/d3/meta.yaml
+++ b/recipes/d3/meta.yaml
@@ -27,7 +27,7 @@ about:
   home: https://github.com/d3/d3
   license: BSD-3-Clause
   license_family: BSD
-  license_file: LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'Bring data to life with SVG, Canvas and HTML.'
   description: |
     D3 (or D3.js) is a JavaScript library for visualizing data using 
