--- a/recipes/jquery/meta.yaml
+++ b/recipes/jquery/meta.yaml
@@ -27,7 +27,7 @@ about:
   home: https://github.com/jquery/jquery
   license: MIT
   license_family: MIT
-  license_file: LICENSE
+  license_file: LICENSE.txt
   summary: 'jQuery JavaScript Library'
   description: |
     jQuery JavaScript Library  
