--- a/recipes/green/meta.yaml
+++ b/recipes/green/meta.yaml
@@ -1,16 +1,19 @@
+{% set name = "green" %}
 {% set version = "2.11.0" %}
 
 package:
-  name: greem
+  name: {{ name }}
   version: {{ version }}
 
 source:
-  fn: green-{{ version }}.tar.gz
-  url:   https://github.com/CleanCut/green/archive/{{version}}.tar.gz
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://github.com/CleanCut/green/archive/{{version}}.tar.gz
   sha256: fb78e51a15872c6a4f2952fc6857c91fef390d89b1d725d85b609c119584c137
 
 build:
-  number: 0
+  number: 1
+  entry_points:
+    - green = green.cmdline:main
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -20,16 +23,43 @@ requirements:
 
   run:
     - python
-    
+    - colorma
+    - python-termstyle
+    - unidecode
+
 test:
   imports:
     - green
+  commands:
+    - green -h
 
 about:
   home: https://github.com/CleanCut/green
   license: MIT
+  license_family: MIT
   license_file: LICENSE
   summary: 'Green is a clean, colorful, fast python test runner'
+  description: >
+    Green - A clean, colorful, fast python test runner.
+
+    Features
+    --------
+
+    - **Clean** - Low redundancy in output. Result statistics for each test is vertically aligned.
+    - **Colorful** - Terminal output makes good use of color when the terminal supports it.
+    - **Fast** - Tests run in independent processes.  (One per processor by default.  Does *not* play nicely with `gevent`)
+    - **Powerful** - Multi-target + auto-discovery.
+    - **Traditional** - Use the normal `unittest` classes and methods for your unit tests.
+    - **Descriptive** - Multiple verbosity levels, from just dots to full docstring output.
+    - **Convenient** - Bash-completion and ZSH-completion of options and test targets.
+    - **Thorough** - Built-in, optional integration with
+      [coverage](http://nedbatchelder.com/code/coverage/).
+    - **Embedded** - Can be run with a setup command without in-site installation.
+    - **Modern** - Supports Python 2.7, and 3.4+. Additionally, [PyPy](http://pypy.org) is supported on a best-effort basis.
+    - **Portable** - macOS, Linux, and BSDs are fully supported.  Windows is supported on a best-effort basis.
+    - **Living** - This project grows and changes.  See the
+  doc_url: https://github.com/CleanCut/green#green
+  dev_url: https://github.com/CleanCut/green
 
 extra:
   recipe-maintainers:
