--- a/recipes/green/meta.yaml
+++ b/recipes/green/meta.yaml
@@ -11,7 +11,7 @@ source:
   sha256: fb78e51a15872c6a4f2952fc6857c91fef390d89b1d725d85b609c119584c137
 
 build:
-  number: 1
+  number: 0
   entry_points:
     - green = green.cmdline:main
   script: python setup.py install --single-version-externally-managed --record record.txt
@@ -26,6 +26,7 @@ requirements:
     - colorama
     - python-termstyle
     - unidecode
+    - mock # [py2]
 
 test:
   imports:
