idna for osx as selector added

--- a/recipes/green/meta.yaml
+++ b/recipes/green/meta.yaml
@@ -26,7 +26,8 @@ requirements:
     - colorama
     - python-termstyle
     - unidecode
-    - mock  # [py2]
+    - mock  # [py2k]
+    - idna  # [osx]
 
 test:
   imports:
