added build paramter

--- a/recipes/fs.sshfs/meta.yaml
+++ b/recipes/fs.sshfs/meta.yaml
@@ -17,18 +17,16 @@ requirements:
   build:
     - python
     - setuptools
+    - docutils
     - pygments
     - green
-    - docutils
-
-  run:
-    - green
-    - docutils
-    - Pygments
     - pyfilesystem2
     - six
     - paramiko
-    
+
+  run:
+    - python
+
 test:
   imports:
     - fs
