removed selector for idna

--- a/recipes/green/meta.yaml
+++ b/recipes/green/meta.yaml
@@ -27,7 +27,7 @@ requirements:
     - python-termstyle
     - unidecode
     - mock  # [py2k]
-    - idna  # [osx]
+    - idna 
 
 test:
   imports:
