--- a/recipes/fs.sshfs/meta.yaml
+++ b/recipes/fs.sshfs/meta.yaml
@@ -26,10 +26,13 @@ requirements:
 
   run:
     - python
+    - green
+    - docutils
+    - pygments
 
 test:
   imports:
-    - fs
+    - fs.sshfs
 
 about:
   home: https://github.com/althonos/fs.sshfs
