skip build on py35

--- a/recipes/green/meta.yaml
+++ b/recipes/green/meta.yaml
@@ -11,6 +11,7 @@ source:
   sha256: fb78e51a15872c6a4f2952fc6857c91fef390d89b1d725d85b609c119584c137
 
 build:
+  skip: True  # [not py35]
   number: 0
   entry_points:
     - green = green.cmdline:main
