added noarch and updated the license path

--- a/recipes/django-rq/meta.yaml
+++ b/recipes/django-rq/meta.yaml
@@ -13,6 +13,7 @@ source:
 
 build:
   number: 0
+  noarch: python
   script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
@@ -32,7 +33,7 @@ about:
   home: https://github.com/ui/django-rq
   license: MIT
   license_family: MIT
-  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
+  license_file: LICENSE.txt
   summary: 'A simple app that provides django integration for RQ (Redis Queue)'
   description: |
     Django integration with RQ, a Redis based Python queuing library. Django-RQ 
