--- a/recipes/pyophidia/meta.yaml
+++ b/recipes/pyophidia/meta.yaml
@@ -1,5 +1,5 @@
 {% set repo = environ.get('GIT_REPO',"OphidiaBigData") %}
-{% set version = 1.4.0 %}
+{% set version = "1.4.0" %}
 
 package:
     name: pyophidia
