--- a/recipes/pyophidia/meta.yaml
+++ b/recipes/pyophidia/meta.yaml
@@ -6,7 +6,7 @@ package:
     version: "{{ version }}"
 
 source:
-    url: git://github.com/{{ GIT_REPO }}/PyOphidia/archives/v{{ version }}.tar.gz
+    url: git://github.com/{{ repo }}/PyOphidia/archives/v{{ version }}.tar.gz
     sha256: b276b11d8e72396f00a95eeec0086df75e6fe6980106eb2fab68d237c665a1f7
 
 build:
