finally passes lint

--- a/recipes/pyophidia/meta.yaml
+++ b/recipes/pyophidia/meta.yaml
@@ -1,20 +1,13 @@
-{% set repo = environ.get('GIT_REPO',"OphidiaBigData") %}
-{% set version = "1.4.0" %}
-
 package:
     name: pyophidia
-    version: "{{ version }}"
+    version: "1.4.0"
 
 source:
-    url: git://github.com/{{ repo }}/PyOphidia/archives/v{{ version }}.tar.gz
+    url: git://github.com/OphidiaBigData/PyOphidia/archives/v1.4.0.tar.gz
     sha256: b276b11d8e72396f00a95eeec0086df75e6fe6980106eb2fab68d237c665a1f7
 
 build:
     number: 0
-
-test:
-    imports:
-        - PyOphidia
 
 requirements:
     build:
@@ -23,8 +16,15 @@ requirements:
     run:
         - python
 
+test:
+    imports:
+        - PyOphidia
+
 about:
     home:  http://github.com/OphidiaBigData/PyOphidia
+    license:  GPLv3
+    licence_file: LICENSE
+    summary: PyOphidia is a Python package for interacting with the Ophidia framework
 
 extra:
     recipe-maintainers:
@@ -33,5 +33,3 @@ extra:
         - minomicetto
         - aledanca
         - sandrofiore
-
-
