some cyan test fixes

--- a/recipes/cyan/meta.yaml
+++ b/recipes/cyan/meta.yaml
@@ -26,7 +26,9 @@ build:
 
 test:
   commands:
-    - cyan --help
+    # cyan has no help or version command :(
+    - test -f $PREFIX/bin/cyan  # [unix]
+    - if not exist %PREFIX%\\bin\\cyan.exe exit 1  # [win]
 
 about:
   home: https://github.com/rwcarlsen/cyan
