changed to pypi version

--- a/recipes/green/meta.yaml
+++ b/recipes/green/meta.yaml
@@ -7,8 +7,8 @@ package:
 
 source:
   fn: {{ name }}-{{ version }}.tar.gz
-  url: https://github.com/CleanCut/green/archive/{{version}}.tar.gz
-  sha256: fb78e51a15872c6a4f2952fc6857c91fef390d89b1d725d85b609c119584c137
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: 0a64e7372079f57643e26e220d1d8ccecb26ba6416963d61e2ec20d2990eda98
 
 build:
   number: 0
