added license file of green-2.11.0

--- a/recipes/green/meta.yaml
+++ b/recipes/green/meta.yaml
@@ -38,6 +38,7 @@ about:
   home: https://github.com/CleanCut/green
   license: MIT
   license_family: MIT
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'Green is a clean, colorful, fast python test runner'
   description: >
     Green - A clean, colorful, fast python test runner.
