addressing @synapticarbors concerns

--- a/recipes/pyophidia/meta.yaml
+++ b/recipes/pyophidia/meta.yaml
@@ -1,13 +1,18 @@
+{% set version = "1.4.0" %}
+
 package:
     name: pyophidia
     version: "1.4.0"
 
 source:
-    url: git://github.com/OphidiaBigData/PyOphidia/archives/v1.4.0.tar.gz
+    url: https://github.com/OphidiaBigData/PyOphidia/archives/v{{ version}}.tar.gz
     sha256: b276b11d8e72396f00a95eeec0086df75e6fe6980106eb2fab68d237c665a1f7
 
 build:
     number: 0
+    noarch: python
+
+script: python setup.py install --single-version-externally-managed --record record.txt
 
 requirements:
     build:
@@ -22,7 +27,7 @@ test:
 
 about:
     home:  http://github.com/OphidiaBigData/PyOphidia
-    license:  GPLv3
+    license:  GPL-3.0
     licence_file: LICENSE
     summary: PyOphidia is a Python package for interacting with the Ophidia framework
 
