--- a/recipes/panedr/meta.yaml
+++ b/recipes/panedr/meta.yaml
@@ -30,10 +30,9 @@ test:
 
 about:
   home: http://github.com/jbarnoud/panedr
-  license: LGPL
+  license: LGPL-2.1
   license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE.txt'
   summary: 'GROMACS edr files to pandas dataframe'
-  # The remaining entries in this section are optional, but recommended
   description: |
       Panedr reads a Gromacs EDR file and returns its content as a pandas dataframe. The library 
       exposes one function—the edr_to_df function—that gets the path to an EDR file and returns a
