Try to fix win/py35 build

--- a/recipes/deepdiff/meta.yaml
+++ b/recipes/deepdiff/meta.yaml
@@ -20,9 +20,11 @@ requirements:
   build:
     - python
     - setuptools
+    - idna          # [win]
     - jsonpickle
   run:
     - python
+    - idna          # [win]
     - jsonpickle
 
 test:
@@ -32,7 +34,7 @@ test:
 about:
   home: https://github.com/seperman/deepdiff
   summary: 'Deep Difference and Search of any Python object/data.'
-  license: MIT License
+  license: MIT
   license_family: MIT
   description: |
     Deep Difference of dictionaries, iterables, strings and other
