--- a/recipes/deepdiff/meta.yaml
+++ b/recipes/deepdiff/meta.yaml
@@ -12,6 +12,7 @@ source:
   md5: {{ md5 }}
 
 build:
+  skip: true        # [linux or osx]
   noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
@@ -20,11 +21,11 @@ requirements:
   build:
     - python
     - setuptools
-    - idna          # [win]
+    - idna 2.5*     # [win]
     - jsonpickle
   run:
     - python
-    - idna          # [win]
+    - idna 2.5*     # [win]
     - jsonpickle
 
 test:
