--- a/recipes/deepdiff/meta.yaml
+++ b/recipes/deepdiff/meta.yaml
@@ -12,7 +12,6 @@ source:
   md5: {{ md5 }}
 
 build:
-  skip: true        # [linux or osx]
   noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
@@ -21,11 +20,11 @@ requirements:
   build:
     - python
     - setuptools
-    - idna 2.5*     # [win]
+    - idna 2.5     # [win]
     - jsonpickle
   run:
     - python
-    - idna 2.5*     # [win]
+    - idna 2.5     # [win]
     - jsonpickle
 
 test:
