Exonerate idna and fix review comments

--- a/recipes/deepdiff/meta.yaml
+++ b/recipes/deepdiff/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "deepdiff" %}
 {% set version = "3.3.0" %}
-{% set md5 = "d16022fbf7b6a1ad401c629b81088614" %}
+{% set sha256 = "ecad8e16a96ffd27e8f40c9801a6ab16ec6a7e7e6e6859a7710ba4695f22702c" %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +9,7 @@ package:
 source:
   fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  md5: {{ md5 }}
+  sha256: {{ sha256 }}
 
 build:
   noarch: python
@@ -20,11 +20,8 @@ requirements:
   build:
     - python
     - setuptools
-    - idna 2.5     # [win]
-    - jsonpickle
   run:
     - python
-    - idna 2.5     # [win]
     - jsonpickle
 
 test:
