added some test commands

--- a/recipes/gulp/meta.yaml
+++ b/recipes/gulp/meta.yaml
@@ -22,7 +22,9 @@ requirements:
   run:
        
 test:
-  imports:
+  commmands:
+    - gulp -h
+    - gulp -v
 
 about:
   home: https://github.com/gulpjs/gulp
