--- a/recipes/jquery/meta.yaml
+++ b/recipes/jquery/meta.yaml
@@ -12,13 +12,13 @@ source:
 
 build:
   number: 0
-  noarch: 'True'
+  noarch: True
+  script: npm install -g .
 
 requirements:
   build:
-    - python
+    - nodejs
   run:
-    - python
     
 test:
   imports:
