Fix github string

--- a/recipes/galario/meta.yaml
+++ b/recipes/galario/meta.yaml
@@ -3,7 +3,7 @@
 # Jinja variables help maintain the recipe as you'll update the version only here.
 {% set name = "galario" %}
 {% set version = "1.0" %}
-{% set github = https://github.com/mtazzari/galario %}
+{% set github = "https://github.com/mtazzari/galario" %}
 {% set sha256 = "3401cb5d0aa32d168da400c8c33a675a010b0cdd7213ff02a7bb8a8a856d9415" %}
 # sha256 is the prefered checksum -- you can get it for a file with:
 #  `openssl sha256 <file name>`.
