Make fixes to recipe

--- a/recipes/llvmlite/meta.yaml
+++ b/recipes/llvmlite/meta.yaml
@@ -1,7 +1,6 @@
 {% set name = "llvmlite" %}
 {% set version = "0.20.0" %}
-{% set hash_type = "sha256" %}
-{% set hash_value = "b2f174848df16bb9195a07fec102110a06d018da736bd9b3570a54d44c797c29" %}
+{% set sha256 = "b2f174848df16bb9195a07fec102110a06d018da736bd9b3570a54d44c797c29" %}
 
 package:
   name: {{ name|lower }}
@@ -21,10 +20,10 @@ requirements:
   build:
     - python
     - setuptools
-    - enum34
+    - enum34  # [py2k]
   run:
     - python
-    - enum34
+    - enum34  # [py2k]
 
 test:
   imports:
