Debug failing tests

--- a/recipes/trilinos/recipe/meta.yaml
+++ b/recipes/trilinos/recipe/meta.yaml
@@ -29,9 +29,11 @@ requirements:
 
 test:
   commands:
+    - ls $PREFIX/include/Teuchos*
+    - ls $PREFIX/lib/libteuchos* 
     - test -f $PREFIX/include/TeuchosCore_ConfigDefs.hpp
-    - test -f $PREFIX/lib/libteuchoscore.12.10.1.dylib    # [osx]
-    - test -f $PREFIX/lib/libteuchoscore.12.10.1.so       # [linux]
+    - test -f $PREFIX/lib/libteuchoscore.12.10.1.dylib
+    - test -f $PREFIX/lib/libteuchoscore.12.10.1.so
 
 about:
   home: https://trilinos.org
