Fix test: file name of Linux library

--- a/recipes/trilinos/recipe/meta.yaml
+++ b/recipes/trilinos/recipe/meta.yaml
@@ -29,11 +29,9 @@ requirements:
 
 test:
   commands:
-    - ls $PREFIX/include/Teuchos*
-    - ls $PREFIX/lib/libteuchos* 
     - test -f $PREFIX/include/TeuchosCore_ConfigDefs.hpp
-    - test -f $PREFIX/lib/libteuchoscore.12.10.1.dylib
-    - test -f $PREFIX/lib/libteuchoscore.12.10.1.so
+    - test -f $PREFIX/lib/libteuchoscore.12.10.1.dylib    # [osx]
+    - test -f $PREFIX/lib/libteuchoscore.so.12.10.1       # [linux]
 
 about:
   home: https://trilinos.org
