--- a/recipes/llvmlite/meta.yaml
+++ b/recipes/llvmlite/meta.yaml
@@ -21,9 +21,11 @@ requirements:
     - python
     - setuptools
     - enum34  # [py2k]
+    - llvmdev
   run:
     - python
     - enum34  # [py2k]
+    - 
 
 test:
   imports:
