fix test comand

--- a/recipes/flask-allows/meta.yaml
+++ b/recipes/flask-allows/meta.yaml
@@ -30,7 +30,7 @@ test:
   imports:
     - flask_allows
   commands:
-    - py.test .
+    - py.test test/.
 
 about:
   home: https://github.com/justanr/flask-allows
