--- a/recipes/flask-allows/meta.yaml
+++ b/recipes/flask-allows/meta.yaml
@@ -26,11 +26,12 @@ requirements:
 test:
   requires:
     - pytest
+    - pytest-flake8
     - flask
   imports:
     - flask_allows
   commands:
-    - py.test test/.
+    - py.test test\
 
 about:
   home: https://github.com/justanr/flask-allows
