--- a/recipes/d3/meta.yaml
+++ b/recipes/d3/meta.yaml
@@ -12,12 +12,14 @@ source:
 
 build:
   number: 0
+  noarch: True
+  script: npm install -g .
 
 requirements:
   build:
-    - python
+    - nodejs
   run:
-    - python
+    - nodejs
     
 test:
   imports:
