--- a/recipes/webdavclient2/meta.yaml
+++ b/recipes/webdavclient2/meta.yaml
@@ -1,4 +1,3 @@
-
 {% set name = "webdavclient2" %}
 {% set version = "0.1.1" %}
 {% set sha256 = "797f121c4e381cb57d7f46abef513191da74959d70096e435269d9479a71ee7f" %}
@@ -13,9 +12,7 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  # Uncomment the following line if the package is pure python and the recipe is exactly the same for all platforms.
-  # See https://conda-forge.org/docs/meta.html#building-noarch-packages for more details.
-  # noarch: python
+  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
@@ -27,10 +24,12 @@ requirements:
     - python
     - requests
     - lxml
-    - libxml2
-    - libxslt
+    - argcomplete
 
 test:
+  commands:
+    # script currently broken, issue #4
+    # - wdc --help
   imports:
     - webdav2
     - webdav2.client
@@ -41,20 +40,14 @@ about:
   license_family: MIT
   license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'WebDAV client, based on original package https://github.com/designerror/webdav-client-python
-   but uses requests instead of PyCURL'
+    but uses requests instead of PyCURL'
 
-  # The remaining entries in this section are optional, but recommended
   description: |
-    WebDAV client, based on original package https://github.com/designerror/webdav-client-python but uses requests instead of PyCURL
-    webdavclient2
-    ============
+    WebDAV client, based on original package https://github.com/designerror/webdav-client-python but
+    uses requests instead of PyCURL
 
-    Based on https://github.com/designerror/webdav-client-python
-    But uses `requests` instead of `PyCURL`
   dev_url: https://github.com/appetito/webdav-client-python-2
 
 extra:
   recipe-maintainers:
-    # GitHub IDs for maintainers of the recipe.
-    # Always check with the people listed below if they are OK becoming maintainers of the recipe. (There will be spam!)
     - ReimarBauer
