--- a/recipes/llvmlite/meta.yaml
+++ b/recipes/llvmlite/meta.yaml
@@ -13,6 +13,7 @@ source:
 
 
 build:
+  skip: True  # [win and py2k]
   number: 0
   script: python setup.py install  --single-version-externally-managed --record=record.txt
 
