--- a/recipes/vaex-core/meta.yaml
+++ b/recipes/vaex-core/meta.yaml
@@ -1,46 +1,27 @@
+{% set name = "vaex-core" %}
+{% set version = "0.1.0" %}
+{% set sha256 = "b13a095f69ef24acf860390cac016303c721576c6c8b0df9a9143f73d2981d7f" %}
+
 package:
-  name: vaex-core
-  version: "0.1.0"
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  fn: vaex-core-0.1.0.tar.gz
-  url: https://pypi.python.org/packages/e9/14/38728e8a2e7cb613663a2ab3d7fa7865d169fac89ad0e8282d853c2b9961/vaex-core-0.1.0.tar.gz
-  md5: 4134baf9cee9c576772d10020053cd64
-#  patches:
-   # List any patch files here
-   # - fix.patch
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
-# build:
-  # noarch: python
-  # preserve_egg_dir: True
-  # entry_points:
-    # Put any entry points (scripts to be generated automatically) here. The
-    # syntax is module:function.  For example
-    #
-    # - vaex-core = vaex-core:main
-    #
-    # Would create an entry point called vaex-core that calls vaex-core.main()
-
-
-  # If this is a new build for the same version, increment the build
-  # number. If you do not include this key, it defaults to 0.
-  # number: 1
+build:
+  number: 0
+  script: python setup.py install --single-version-externally-managed --record record.txt
+  entry_points:
+     - vaex = vaex.__main__:main
 
 requirements:
   build:
     - python
     - setuptools
     - numpy >=1.11
-    - scipy
-    - astropy >=1
-    - aplus
-    - futures >=2.2.0
-    - future >=0.15.2
-    - pyyaml
-    - progressbar2
-    - psutil >=1.2.1
-    - requests
-    - six
 
   run:
     - python
@@ -57,29 +38,20 @@ requirements:
     - six
 
 test:
-  # Python imports
   imports:
     - vaex
+    - vaex.vaexfast
     - vaex.core
-
-  # commands:
-    # You can put test commands to be run here.  Use this to test that the
-    # entry points work.
-
-
-  # You can also put a file called run_test.py in the recipe that will be run
-  # at test time.
-
-  # requires:
-    # Put any additional test requirements here.  For example
-    # - nose
 
 about:
   home: https://www.github.com/maartenbreddels/vaex
   license: MIT
-  summary: 'Core of vaex'
   license_family: MIT
+  summary: 'Core of vaex'
+  doc_url: http://vaex.astro.rug.nl/latest
+  dev_url: https://www.github.com/maartenbreddels/vaex
 
-# See
-# http://docs.continuum.io/conda/build.html for
-# more information about meta.yaml
+
+extra:
+  recipe-maintainers:
+    - maartenbreddels
