guessing which dep, try futures like in vaex

--- a/recipes/vaex-core/meta.yaml
+++ b/recipes/vaex-core/meta.yaml
@@ -28,7 +28,7 @@ requirements:
     - scipy
     - astropy >=1
     - aplus
-    - futures >=2.2.0
+    - futures >=2.2.0  # [py27 or py35]
     - future >=0.15.2
     - pyyaml
     - progressbar2
