Don't use un-pinned Numpy versions

--- a/recipes/astropy-healpix/meta.yaml
+++ b/recipes/astropy-healpix/meta.yaml
@@ -20,11 +20,11 @@ requirements:
     - python
     - setuptools
     - toolchain
-    - numpy x.x
+    - numpy 1.10.*
   run:
     - python
-    - numpy x.x
-    - astropy
+    - numpy >=1.10.*
+    - astropy >=1.2
 
 test:
   imports:
