--- a/recipes/astropy-healpix/meta.yaml
+++ b/recipes/astropy-healpix/meta.yaml
@@ -20,10 +20,12 @@ requirements:
     - python
     - setuptools
     - toolchain
-    - numpy 1.10.*
+    - numpy 1.10.*  # [not (win and (py35 or py36))]
+    - numpy 1.11.*  # [win and (py35 or py36)]
   run:
     - python
-    - numpy >=1.10.*
+    - numpy >=1.10  # [not (win and (py35 or py36))]
+    - numpy >=1.11  # [win and (py35 or py36)]
     - astropy >=1.2
 
 test:
