--- a/recipes/fs.sshfs/meta.yaml
+++ b/recipes/fs.sshfs/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 8f021a5eb7526e215e9f4f308395546a1a9412c4fd38ecb58cf0cf79fe272a62
 
 build:
-  skip: True  # [win]
+  skip: True  # [not win]
   noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
