revert back to github url

--- a/recipes/fs.sshfs/meta.yaml
+++ b/recipes/fs.sshfs/meta.yaml
@@ -6,11 +6,11 @@ package:
 
 source:
   fn: fs.sshfs-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: 8f021a5eb7526e215e9f4f308395546a1a9412c4fd38ecb58cf0cf79fe272a62
+  url: https://github.com/althonos/fs.sshfs/archive/v{{version}}.tar.gz
+  sha256: 5d08c74cb5bcf207c57c754485b656391ef47240613b06312258830e94e136d6
 
 build:
-  #skip: true  # [not win]
+  skip: true  # [not win]
   noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
