--- a/recipes/fs.sshfs/meta.yaml
+++ b/recipes/fs.sshfs/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 5d08c74cb5bcf207c57c754485b656391ef47240613b06312258830e94e136d6
 
 build:
-  skip: true  # [not win]
+  skip: true  # [win]
   noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
