fixed jinja template

--- a/recipes/fs.sshfs/meta.yaml
+++ b/recipes/fs.sshfs/meta.yaml
@@ -1,11 +1,12 @@
+{% set name = "fs.sshfs" %}
 {% set version = "0.6.0" %}
 
 package:
-  name: fs.sshfs
+  name: {{ name }}
   version: {{ version }}
 
 source:
-  fn: fs.sshfs-{{ version }}.tar.gz
+  fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: 8f021a5eb7526e215e9f4f308395546a1a9412c4fd38ecb58cf0cf79fe272a62
 
