--- a/recipes/fs.sshfs/meta.yaml
+++ b/recipes/fs.sshfs/meta.yaml
@@ -35,7 +35,7 @@ test:
 about:
   home: https://github.com/althonos/fs.sshfs
   license: LGPL v2.1
-  license_file: COPYING
+  license_file: '{{ environ["RECIPE_DIR"] }}/COPYING'
   summary: 'Pyfilesystem2 over SSH using paramiko'
 
 extra:
