removed command option until the testing command is fixed

--- a/recipes/webdavclient2/meta.yaml
+++ b/recipes/webdavclient2/meta.yaml
@@ -27,8 +27,8 @@ requirements:
     - argcomplete
 
 test:
-  commands:
-    # script currently broken, issue #4
+  # commands:
+    # script currently broken, issue https://github.com/appetito/webdav-client-python-2/issues/4
     # - wdc --help
   imports:
     - webdav2
