--- a/recipes/pykafka/meta.yaml
+++ b/recipes/pykafka/meta.yaml
@@ -31,6 +31,7 @@ requirements:
 test:
   imports:
     - pykafka
+    - pykafka.rdkafka  # [not win]
 
 about:
   home: http://github.com/parsely/pykafka
