--- a/recipes/pykafka/meta.yaml
+++ b/recipes/pykafka/meta.yaml
@@ -12,7 +12,6 @@ source:
   sha256: {{ sha256 }}
 
 build:
-  noarch: python
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
 
@@ -21,6 +20,7 @@ requirements:
     - python
     - setuptools
     - toolchain
+    - librdkafka  # [not win]
   run:
     - python
     - setuptools
