--- a/recipes/pykafka/meta.yaml
+++ b/recipes/pykafka/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     - python
     - setuptools
     - toolchain
-    - librdkafka  # [not win]
+    - librdkafka 0.9.4|0.9.5  # [not win]
   run:
     - python
     - setuptools
@@ -28,7 +28,7 @@ requirements:
     - kazoo
     - tabulate
     - gevent
-    - librdkafka  # [not win]
+    - librdkafka 0.9.4|0.9.5  # [not win]
 
 test:
   imports:
