--- a/recipes/vaex-core/meta.yaml
+++ b/recipes/vaex-core/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "vaex-core" %}
-{% set version = "0.1.2" %}
-{% set sha256 = "9ac79410b5ebab5f1caacd6a221f40d056efb107424e681c1484050f1bec8182" %}
+{% set version = "0.1.3" %}
+{% set sha256 = "07633b513081f27a2eb266a419914961c24f517885b8c1a3e572a3ddac7a196f" %}
 
 package:
   name: {{ name|lower }}
@@ -46,6 +46,7 @@ about:
   home: https://www.github.com/maartenbreddels/vaex
   license: MIT
   license_family: MIT
+  license_file: LICENSE.txt
   summary: 'Core of vaex'
   doc_url: http://vaex.astro.rug.nl/latest
   dev_url: https://www.github.com/maartenbreddels/vaex
