--- a/recipes/vaex-hdf5/meta.yaml
+++ b/recipes/vaex-hdf5/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "vaex-hdf5" %}
-{% set version = "0.1.3" %}
-{% set sha256 = "97f64f3654250d25ef4bc442a9fa42826c68739888c3602b6bd54e260e9055b7" %}
+{% set version = "0.1.4" %}
+{% set sha256 = "d476d8825905efe8865ac4d747a1ec07f0be50c78e2c21bafd46565a127d5cd0" %}
 
 package:
   name: {{ name|lower }}
@@ -32,6 +32,7 @@ about:
   home: https://www.github.com/maartenbreddels/vaex
   license: MIT
   license_family: MIT
+  license_file: LICENSE.txt
   summary: hdf5 file support for vaex
 
 extra:
