Add test and fix the license name

--- a/recipes/texttable/meta.yaml
+++ b/recipes/texttable/meta.yaml
@@ -24,9 +24,13 @@ requirements:
   run:
     - python
 
+test:
+  imports:
+    - texttable
+    
 about:
   home: https://github.com/foutaise/texttable/
-  license:  GNU Library or Lesser General Public License (LGPL)
+  license: LGPL
   license_family: LGPL
   license_url: https://github.com/foutaise/texttable/blob/master/LICENSE
   summary: Python module for creating simple ASCII tables
