Add LICENSE file

--- a/recipes/lml/meta.yaml
+++ b/recipes/lml/meta.yaml
@@ -27,14 +27,12 @@ requirements:
 test:
   imports:
     - lml
-  requires:
-    - nose
 
 about:
   home: https://github.com/chfw/lml.git
-  license: New BSD
+  license: BSD-3-Clause
   license_family: BSD
-  license_url: https://github.com/chfw/lml/blob/master/LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'Load me later. A lazy loading plugin management system.'
   doc_url: http://lml.readthedocs.io/en/latest/
   dev_url: https://github.com/chfw/lml.git
