--- a/recipes/texttable/meta.yaml
+++ b/recipes/texttable/meta.yaml
@@ -27,12 +27,12 @@ requirements:
 test:
   imports:
     - texttable
-    
+
 about:
   home: https://github.com/foutaise/texttable/
-  license: LGPL
+  license: LGPL-3.0
   license_family: LGPL
-  license_url: https://github.com/foutaise/texttable/blob/master/LICENSE
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: Python module for creating simple ASCII tables
   description: texttable is a module to generate a formatted text table, using ASCII characters.
   doc_url: https://github.com/foutaise/texttable#documentation
