--- a/recipes/qpbo/recipe/meta.yaml
+++ b/recipes/qpbo/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "qpbo_header_only" %}
 {% set version = "0.2.2" %}
-# {% set sha256 = "22900f7e331967db75e474382994d8b89139065a321581ade3cb26fbbc2b3c9d" %}
+{% set sha256 = "c84dd126bd91503f4f8dd0eb35b444d9ce2637738c75aa727c7b0c68543b275d" %}
 
 package:
   name: {{ name|lower }}
@@ -9,7 +9,7 @@ package:
 source:
   fn: qpbo-{{ version }}.tar.gz
   url: https://github.com/DerThorsten/qpbo/archive/{{ version }}.tar.gz
-  # sha256: {{ sha256 }}
+  sha256: {{ sha256 }}
 
 build:
   number: 0
