--- a/recipes/qpbo/recipe/meta.yaml
+++ b/recipes/qpbo/recipe/meta.yaml
@@ -30,7 +30,7 @@ about:
   home: https://github.com/DerThorsten/qpbo
   license: GPL
   license_family: GPL
-  license_file: LICENSE
+  license_file: LICENCE
   summary: 'Qpbo'
   description: 'Qpbo'
   documentation_url:  https://github.com/DerThorsten/qpbo
