shasum not matching on travis, wonder why

--- a/recipes/pyophidia/meta.yaml
+++ b/recipes/pyophidia/meta.yaml
@@ -2,7 +2,7 @@
 
 package:
     name: pyophidia
-    version: "1.4.0"
+    version: "{{ version }}"
 
 source:
     url: https://github.com/OphidiaBigData/PyOphidia/archives/v{{ version}}.tar.gz
