use jinja variables; general cleanup

--- a/recipes/clickhouse-cityhash/meta.yaml
+++ b/recipes/clickhouse-cityhash/meta.yaml
@@ -1,11 +1,15 @@
+{% set name = "clickhouse-cityhash" %}
+{% set version = "1.0.2" %}
+{% set sha256 = "d68f37727f165592f175d87ae38ec5cd5ef93e5c8b0ab70073cae45d185cd2fc" %}
+
 package:
-  name: clickhouse-cityhash
-  version: "1.0.2"
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  fn: clickhouse-cityhash-1.0.2.tar.gz
-  url: https://pypi.python.org/packages/fb/e3/282f812aeace32817a6b2b894ccdfbe31146364294668cc85e1ad87b6f3f/clickhouse-cityhash-1.0.2.tar.gz
-  md5: 13982de613981509c68377d328238304
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
   number: 0
@@ -16,20 +20,21 @@ requirements:
   build:
     - python
     - setuptools
+    - toolchain
 
   run:
     - python
 
 test:
-  # Python imports
   imports:
+    - cityhash
     - clickhouse_driver
     - clickhouse_driver.util
 
 about:
   home: https://github.com/xzkostyan/python-cityhash
-  license: MIT
   summary: 'Python-bindings for CityHash, a fast non-cryptographic hash algorithm'
+  license_file: LICENSE
   license_family: MIT
 
 extra:
