--- a/recipes/clickhouse-driver/meta.yaml
+++ b/recipes/clickhouse-driver/meta.yaml
@@ -1,11 +1,15 @@
+{% set name = "clickhouse-driver" %}
+{% set version = "0.0.6" %}
+{% set sha256 = "98c3475c63bf85694510d04c54f89beefe47248b1f2de112354cbc22fe64068b" %}
+
 package:
-  name: clickhouse-driver
-  version: "0.0.6"
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  fn: clickhouse-driver-0.0.6.tar.gz
-  url: https://pypi.python.org/packages/c4/6c/0ecda67c0f1c8730d420ffe1fad545b489217ccbb85b3a46ac3d0c8131b9/clickhouse-driver-0.0.6.tar.gz
-  md5: 35b490d919664974f7144cbcc27c0c8e
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
   number: 0
@@ -15,14 +19,12 @@ requirements:
   build:
     - python
     - setuptools
-    - six
 
   run:
     - python
     - six
 
 test:
-  # Python imports
   imports:
     - clickhouse_driver
     - clickhouse_driver.columns
