--- a/recipes/clickhouse-sqlalchemy/meta.yaml
+++ b/recipes/clickhouse-sqlalchemy/meta.yaml
@@ -1,11 +1,15 @@
+{% set name = "clickhouse-sqlalchemy" %}
+{% set version = "0.0.4" %}
+{% set sha256 = "73f0d4aa7038821be3cdc9cf01e09dad8494fb749c464e591f44480bdaa1c669" %}
+
 package:
-  name: clickhouse-sqlalchemy
-  version: "0.0.3"
+  name: {{ name|lower }}
+  version: {{ version }}
 
 source:
-  fn: clickhouse-sqlalchemy-0.0.3.tar.gz
-  url: https://pypi.python.org/packages/cb/3c/3720527c06c31ca1c2c1f0e33af30b3dc099e6a69d73357063a5f19126df/clickhouse-sqlalchemy-0.0.3.tar.gz
-  md5: b3e9eef9cd4960d1d7de47c843e7e987
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
   number: 0
@@ -15,9 +19,7 @@ requirements:
   build:
     - python
     - setuptools
-    - six
     - sqlalchemy
-    - requests
     - clickhouse-driver >=0.0.5
 
   run:
@@ -29,7 +31,6 @@ requirements:
     - clickhouse-driver >=0.0.5
 
 test:
-  # Python imports
   imports:
     - clickhouse_sqlalchemy
     - clickhouse_sqlalchemy.drivers
