fix cityhash import test

--- a/recipes/clickhouse-cityhash/meta.yaml
+++ b/recipes/clickhouse-cityhash/meta.yaml
@@ -27,9 +27,7 @@ requirements:
 
 test:
   imports:
-    - cityhash
-    - clickhouse_driver
-    - clickhouse_driver.util
+    - clickhouse_driver.util.cityhash
 
 about:
   home: https://github.com/xzkostyan/python-cityhash
