--- a/recipes/clickhouse-cityhash/meta.yaml
+++ b/recipes/clickhouse-cityhash/meta.yaml
@@ -32,6 +32,7 @@ test:
 about:
   home: https://github.com/xzkostyan/python-cityhash
   summary: 'Python-bindings for CityHash, a fast non-cryptographic hash algorithm'
+  license: MIT
   license_file: LICENSE
   license_family: MIT
 
