--- a/recipes/galario/meta.yaml
+++ b/recipes/galario/meta.yaml
@@ -14,10 +14,21 @@ package:
   name: {{ name|lower }}
   version: {{ version }}
 
+# source:
+
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: {{ github }}/archive/v{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  # for a release with tarball
+  # fn: {{ name }}-{{ version }}.tar.gz
+  # url: {{ github }}/archive/v{{ version }}.tar.gz
+  # sha256: {{ sha256 }}
+
+  # from the master branch
+  # git_url: {{ github }}.git
+  # git_rev: master
+
+  # from a local repo
+  git_url: ../../../galario/.git
+  git_rev: conda-build
 
 build:
   number: 0
@@ -32,7 +43,7 @@ requirements:
     # compilation
     - cmake
     - fftw
-    - toolchain
+    - gcc 4.8.5
     # python bindings
     - python
     - cython
@@ -41,13 +52,22 @@ requirements:
     - scipy
 
   run:
+    # c++
+    - libgcc
+    - fftw
+    # python
     - python
+    - numpy
+    - pytest
+    - scipy
 
 test:
   commands:
-    - test -d ${PREFIX}/include/galario.h
-    - test -d ${PREFIX}/lib/libgalario.so  # [linux]
-    - test -d ${PREFIX}/lib/libgalario.dylib  # [osx]
+    - test -d ${PREFIX}/
+    - test ${PREFIX}/include/galario.h
+    - test ${PREFIX}/lib/libgalario.so  # [linux]
+    - test ${PREFIX}/lib/libgalario.dylib  # [osx]
+    - python -c 'import galario'
 
 about:
   home: {{ github }}
