Openmp and compiler only added on the mac

--- a/recipes/galario/meta.yaml
+++ b/recipes/galario/meta.yaml
@@ -43,7 +43,8 @@ requirements:
     # compilation
     - cmake
     - fftw
-    - gcc 4.8.5
+    - clangdev  # [osx]
+    - openmp  # [osx]
     # python bindings
     - python
     - cython
@@ -53,8 +54,8 @@ requirements:
 
   run:
     # c++
-    - libgcc
     - fftw
+    - openmp  # [osx]
     # python
     - python
     - numpy
