--- a/recipes/galario/meta.yaml
+++ b/recipes/galario/meta.yaml
@@ -27,7 +27,8 @@ source:
   # git_rev: master
 
   # from a local repo
-  git_url: ../../../galario/.git
+  # git_url: ../../../galario/.git
+  git_url: https://github.com/fredRos/galario.git
   git_rev: conda-build
 
 build:
