--- a/recipes/wkhtmltopdf/meta.yaml
+++ b/recipes/wkhtmltopdf/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "wkhtmltopdf" %}
 {% set major_minor = "0.12" %}
-{% set version = majopr_minor + ".4" %}
+{% set version = major_minor + ".4" %}
 
 package:
   name: {{ name|lower }}
@@ -8,23 +8,21 @@ package:
 
 source:
   fn: wkhtmltox-{{ version }}_linux-generic-amd64.tar.xz  # [linux]
-  url: http://download.gna.org/{{ name }}/{{ major_minor }}/{{ version }}/wkhtmltox-{{ version }}_linux-generic-amd64.tar.xz  # [linux]
+  url: https://github.com/{{ name }}/{{ name }}/releases/download/{{ version }}/wkhtmltox-{{ version }}_linux-generic-amd64.tar.xz  # [linux]
   sha256: 049b2cdec9a8254f0ef8ac273afaf54f7e25459a273e27189591edc7d7cf29db  # [linux]
 
 build:
   number: 0
 
-requirements:
-  install:
-    - libgcc
-
-test:  # Skip test for now due to glibc version
+test:
   commands:
     - wkhtmltopdf -h
 
 about:
   home: http://wkhtmltopdf.org/
   license: LGPLv3
+  license_family: GPL
+  license_file: '{{ environ["RECIPE_DIR"] }}/LICENSE'
   summary: 'Command line tools to render HTML into PDF and various image formats.'
   description: |
     wkhtmltopdf and wkhtmltoimage are open source (LGPLv3) command line tools
