[meta] Fix gcc requirements on osx

--- a/recipes/galario/meta.yaml
+++ b/recipes/galario/meta.yaml
@@ -44,8 +44,7 @@ requirements:
     # compilation
     - cmake
     - fftw
-    - clangdev  # [osx]
-    - openmp  # [osx]
+    - gcc  # [osx]
     # python bindings
     - python
     - cython
@@ -56,7 +55,7 @@ requirements:
   run:
     # c++
     - fftw
-    - openmp  # [osx]
+    - libgcc  # [osx]
     # python
     - python
     - numpy
