--- a/recipes/resonance/meta.yaml
+++ b/recipes/resonance/meta.yaml
@@ -14,13 +14,14 @@ source:
 build:
   number: 0
   script: python setup.py install --single-version-externally-managed --record record.txt
+  skip: True  # [py2k]
 
 requirements:
   build:
-    - python >=3.5
+    - python
     - setuptools
   run:
-    - python >=3.5
+    - python
     - numpy >=1.13
     - scipy >=0.19
     - pandas >=0.20
