JSON list format for mainteners

--- a/recipes/wfdb/meta.yaml
+++ b/recipes/wfdb/meta.yaml
@@ -20,7 +20,7 @@ requirements:
     - python
     - setuptools
     - nose >=1.3.7
-    - numpy >=1.11.0
+    - numpy >=1.11.0git
     - matplotlib >=1.5.1
     - requests >=2.10.0
     - pandas >=0.19.1
@@ -53,4 +53,5 @@ about:
   dev_url: https://github.com/MIT-LCP/wfdb-python
 
 extra:
-  recipe-maintainers: 'Gijom'
+  recipe-maintainers:
+    - Gijom
