require fontconfig [skip-appveyor]

--- a/recipes/wkhtmltopdf/meta.yaml
+++ b/recipes/wkhtmltopdf/meta.yaml
@@ -19,6 +19,10 @@ test:
   commands:
     - wkhtmltopdf -h
 
+requires:
+  install:
+    - fontconfig
+
 about:
   home: http://wkhtmltopdf.org/
   license: LGPLv3
