doh [skip-appveyor]

--- a/recipes/wkhtmltopdf/meta.yaml
+++ b/recipes/wkhtmltopdf/meta.yaml
@@ -19,9 +19,9 @@ test:
   commands:
     - wkhtmltopdf -h
 
-requires:
-  install:
-    - fontconfig
+requirements:
+  run:
+    - fontconfig 2.12.*
 
 about:
   home: http://wkhtmltopdf.org/
