--- a/recipes/galario/meta.yaml
+++ b/recipes/galario/meta.yaml
@@ -23,21 +23,20 @@ source:
   # sha256: {{ sha256 }}
 
   # from the master branch
-  # git_url: {{ github }}.git
-  # git_rev: master
+  git_url: {{ github }}.git
+  git_rev: master
 
   # from a local repo
   # git_url: ../../../galario/.git
-  git_url: https://github.com/fredRos/galario.git
-  git_rev: conda-build
+  # git_url: https://github.com/fredRos/galario.git
+  # git_rev: conda-build
 
 build:
   number: 0
   # If the installation is complex, or different between Unix and Windows, use separate bld.bat and build.sh files instead of this key.
   # By default, the package will be built for the Python versions supported by conda-forge and for all major OSs.
   # Add the line "skip: True  # [py<35]" (for example) to limit to Python 3.5 and newer, or "skip: True  # [not win]" to limit to Windows.
-  # script: python setup.py install --single-version-externally-managed --record record.txt
-  skip: true  # [win]
+  skip: True  # [win]
 
 requirements:
   build:
@@ -98,6 +97,5 @@ about:
 extra:
   recipe-maintainers:
     # GitHub IDs for maintainers of the recipe.
-    # Always check with the people listed below if they are OK becoming maintainers of the recipe. (There will be spam!)
     - fredRos
     - mtazzari
