Basic metadata tweaks

--- a/recipes/doc2dash/meta.yaml
+++ b/recipes/doc2dash/meta.yaml
@@ -13,6 +13,7 @@ source:
   '{{ hash_type }}': '{{ hash_value }}'
 
 build:
+  noarch: python
   number: 0
   entry_points:
     - doc2dash = doc2dash.__main__:main
@@ -52,7 +53,7 @@ about:
   home: https://doc2dash.readthedocs.io/
   license: MIT License
   license_family: MIT
-  license_file: ''
+  license_file: 'LICENSE'
   summary: Convert docs to Dash.app
   description: "doc2dash: Create docsets for Dash.app and clones\n================================================\n\n.. image:: https://readthedocs.org/projects/doc2dash/badge/?version=stable\n   :target:\
     \ https://doc2dash.readthedocs.io/en/stable/?badge=stable\n   :alt: Documentation Status\n\n.. image:: https://travis-ci.org/hynek/doc2dash.svg?branch=master\n   :target: https://travis-ci.org/hynek/doc2dash\n\
@@ -66,8 +67,9 @@ about:
     \ parser class.\n  `#60 <https://github.com/hynek/doc2dash/pull/60>`_\n\n`Full changelog <https://doc2dash.readthedocs.io/en/stable/changelog.html>`_.\n\nAuthors\n=======\n\n``doc2dash`` is written\
     \ and maintained by Hynek Schlawack.\n\nThe development is kindly supported by `Variomedia AG <https://www.variomedia.de/>`_.\n\nA full list of contributors can be found on `GitHub's overview <https://github.com/hynek/doc2dash/graphs/contributors>`_.\n\
     \n\n"
-  doc_url: ''
-  dev_url: ''
+  doc_url: 'https://doc2dash.readthedocs.io/'
+  dev_url: 'https://github.com/hynek/doc2dash'
 
 extra:
-  recipe-maintainers: ''
+  recipe-maintainers:
+    - pbronez
