Correct About Metadata

--- a/recipes/doc2dash/meta.yaml
+++ b/recipes/doc2dash/meta.yaml
@@ -50,8 +50,8 @@ test:
     - doc2dash --help
 
 about:
-  home: https://doc2dash.readthedocs.io/
-  license: MIT License
+  home: https://pypi.org/project/doc2dash/
+  license: MIT
   license_family: MIT
   license_file: 'LICENSE'
   summary: Convert docs to Dash.app
